--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.8.0
   firebase_auth: ^3.1.4
   google_fonts: 
+  firebase_dynamic_links: ^2.0.11
 dev_dependencies:
   flutter_test:
     sdk: flutter
